--- a/views/index.ejs
+++ b/views/index.ejs
@@ -37,8 +37,8 @@
     <div class="card-body">
      
       <p class="card-text">
-        <%= shortUrl.short %>
 
+        <a href="<%= shortUrl.short %>"><%= shortUrl.short %></a>
       </p>
     </div>
   </div>
