--- a/views/index.ejs
+++ b/views/index.ejs
@@ -38,7 +38,7 @@
      
       <p class="card-text">
 
-        <a href="<%= shortUrl.short %>"><%= shortUrl.short %></a>
+        <a href="<%= shortUrl %>"><%= shortUrl %></a>
       </p>
     </div>
   </div>
